[project]
name = "lvu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "decord>=0.6.0",
    "fire>=0.7.0",
    "pillow>=11.1.0",
    "qwen-vl-utils>=0.0.10",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.0",
    "deepcodec==0.0.8",
    "setuptools",
    "torchcodec==0.2",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["lvu"]
exclude = ["assets"]